tests/valid/teste_comp.ts
let x: number = 5 > 10;
let y: number = 5 <= 10;
let z: number = 10 == 10;

console.log(x);
console.log(y);
console.log(z);
console.log(5 >= 3);