tests/invalid/teste_mult.ts
let x = 10 @ 5;
let y : number = "ola";
console.log(123);
let z : number = 42